[package]
name = "deranged"
version = "0.2.1"
authors = ["Jacob Pratt <jacob@jhpratt.dev>"]
edition = "2021"
rust-version = "1.56.0"
repository = "https://github.com/jhpratt/deranged"
keywords = ["integer", "int", "range"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Ranged integers"

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rand = { version = "0.8.4", optional = true, default-features = false }
serde = { version = "1.0.126", optional = true, default-features = false }
