[package]
name = "deranged"
version = "0.2.5"
authors = ["Jacob Pratt <jacob@jhpratt.dev>"]
edition = "2021"
rust-version = "1.56.0"
repository = "https://github.com/jhpratt/deranged"
keywords = ["integer", "int", "range"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Ranged integers"

[features]
default = ["std"]
std = []
num = ["num-traits"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docs_rs"]

[dependencies]
num-traits = { version = "0.2.15", optional = true, default-features = false }
rand = { version = "0.8.4", optional = true, default-features = false }
serde = { version = "1.0.126", optional = true, default-features = false }
